<resources>
    <string name="app_name">SBTechincalTest</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log in</string>
    <string name="login_welcome">Welcome Back</string>
    <string name="login_subtitle">Log in to your Student Beans account</string>
    <string name="photos_title">Photos</string>
</resources>
